--- a/index.html
+++ b/index.html
@@ -202,12 +202,26 @@
             <div class="tabs-content">
                 <div tab-id="1" class="tab active">
 
-                    Functions and OOPS related programming.<br /> Global and Globals,Recursions,Lambda function,Decorators,constructors,getters and setters.<br /> Concepts like inner classes ,defunctions under functions. Inheritance and its types(MRO).Constructors
-                    in inheritance. <br /> Polymorhism and its types-(Duck typing,Operator Overloading,Method Overloading,Method overridding)
-                    <br /> Abstract classes and methods in python<br /> Generators and Iterators in Python Numpy in python.
-                    <br /> Packages in python for array as numpy and its types. <br /> File Handling in python. Multithreading in python. <br /> Data frames concept Data Science related skills like Pandas,Matrix,Matplotlib.pylab.
-                    <br /> The Scatter plot,Bar plot,Histogram ,Box and Whiskers plot,Pairwise plot. <br /> Dealing with missing data in dataframe. Matimatical conceptsas Matrices, correlation (pearsons,spearman, kendall’s rank) ,probability. <br /> Patterns
-                    in python.<br><br />
+                    Functions and OOPS related programming.
+                    <br />Global and Globals ,Recursions ,Lambda function ,Decorators ,constructors ,getters and setters.
+                    <br />Concepts like inner classes ,defunctions under functions. Inheritance and its types(MRO).Constructors in inheritance.
+                    <br />Polymorhism and its types-(Duck typing,Operator Overloading,Method Overloading,Method overridding)
+                    <br />Abstract classes and methods in python.
+                    <br />Difference between array and list. .Designing List as a Linked List in python. 
+                    <br />Generators and Iterators in Python .List comprehensions, Numpy in python.
+                    <br />File Handling in python. 
+                    <br />Multithreading in python.Thread Synchronization(Lock Sync,R lock, Bounded Semaphore).Thread Communcation with event,wait,set,clear. DeamonThreads.
+                    <br />Python Connections with mysql,Postgresql. And setting up queries to deliver it to clients.(fetchall(), fetchmany(), fetchone()).
+                    <br />Big 0 Notations and the time complexity.
+                    <br />Searching and sorting technique as Binary Search ,Selection sort, Insertion sort , Merge Sort ,Quick Sort, Heap Sort.
+                    <br />Binary Search Tree dynamically sorted
+                    <br />The time module,join statements.
+                    <br />Django and the making the making of site dynamic as a beginner.
+                    <br />Data frames concept Data Science related skills like Pandas,Matrix,Matplotlib.pylab.
+                    <br />The Scatter plot,Bar plot,Histogram ,Box and Whiskers plot,Pairwise plot.
+                    <br />Dealing with missing data in dataframe. Matimatical conceptsas Matrices, correlation (pearsons,spearman, kendall’s rank) ,probability
+                    <br />Patterns in python.
+
 
                 </div>
                 <div tab-id="2" class="tab">
